@@ -88,32 +88,6 @@
 		</tr>							
 		<tr>
 			<td>
-				<bean:message bundle="MANAGER_RESOURCES" key="message.manager.execution.course.comment"/>
-			</td>
-			<td>
-				<html:textarea bundle="HTMLALT_RESOURCES" altKey="textarea.comment" property="comment" rows="3" cols="45" />
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<bean:message bundle="MANAGER_RESOURCES" key="message.manager.execution.course.entry.phase"/>
-			</td>
-			<td>
-				<html:select bundle="HTMLALT_RESOURCES" property="entryPhase">
-					<html:optionsCollection name="entryPhases"/>
-				</html:select>
-			</td>
-		</tr>						
-		<tr>
-			<td>
-				<bean:message bundle="MANAGER_RESOURCES" key="message.manager.execution.course.available.grade.submission"/>
-			</td>
-			<td>
-				<html:checkbox property="availableGradeSubmission" value ="true"/>
-			</td>
-		</tr>
-		<tr>
-			<td>
 				<br/>
 				<html:submit bundle="HTMLALT_RESOURCES" altKey="submit.submit" styleClass="inputbutton">
 					<bean:message bundle="MANAGER_RESOURCES" key="button.save"/>
