@@ -1,3 +1,4 @@
+- Refactor: Cleanup deprecated execution course slots
 - Refactor: Cleanup deprecated forum
 
 31.0.0 (05-11-2020)
